# MQSS-Passes-Suite

./: .clang-format  .gitignore  .gitlab-ci.yml  .gitmodules  .pre-commit-config.yaml  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Doxyfile  LICENSE  Makefile  README.md  build.sh  build_documentation.sh  clean.sh  install.sh  llvm_formatting.sh  uninstall.cmake.in
backends/: CMakeLists.txt  IQMBackend.cpp  IQMBackend.hpp  JobRunner.hpp  Q20Backend.cpp  Q5Backend.cpp
docs/: CMakeLists.txt  Doxyfile.in  cudaq-decompositions.md  cudaq-transpiler.md  examples.md  faq.md  guide.md  header.html  index.md  layout.xml  style.css  support.md  templates.md  tests.md
docs/html/: PassModule_8hpp.html  PassModule_8hpp_source.html  PassRunner_8cpp.html  PassRunner_8hpp.html  PassRunner_8hpp_source.html  QirAllocationAnalysis_8cpp.html  QirAllocationAnalysis_8hpp.html  QirAllocationAnalysis_8hpp_source.html  QirAnnotateUnsupportedGates_8cpp.html  QirAnnotateUnsupportedGates_8hpp.html  QirAnnotateUnsupportedGates_8hpp_source.html  QirBarrierBeforeFinalMeasurements_8cpp.html  QirBarrierBeforeFinalMeasurements_8hpp.html  QirBarrierBeforeFinalMeasurements_8hpp_source.html  QirCNotToHCZHDecomposition_8cpp.html  QirCNotToHCZHDecomposition_8hpp.html  QirCNotToHCZHDecomposition_8hpp_source.html  QirCZToHCnotHDecomposition_8cpp.html  QirCZToHCnotHDecomposition_8hpp.html  QirCZToHCnotHDecomposition_8hpp_source.html  QirCommuteCnotRx_8cpp.html  QirCommuteCnotRx_8hpp.html  QirCommuteCnotRx_8hpp_source.html  QirCommuteCnotX_8cpp.html  QirCommuteCnotX_8hpp.html  QirCommuteCnotX_8hpp_source.html  QirCommuteCnotZ_8cpp.html  QirCommuteCnotZ_8hpp.html  QirCommuteCnotZ_8hpp_source.html  QirCommuteRxCnot_8cpp.html  QirCommuteRxCnot_8hpp.html  QirCommuteRxCnot_8hpp_source.html  QirCommuteXCnot_8cpp.html  QirCommuteXCnot_8hpp.html  QirCommuteXCnot_8hpp_source.html  QirCommuteZCnot_8cpp.html  QirCommuteZCnot_8hpp.html  QirCommuteZCnot_8hpp_source.html  QirDeferMeasurement_8cpp.html  QirDeferMeasurement_8hpp.html  (+307 more)
docs/tikz/: convert-pdf-to-png.sh  generate-pdf-from-tikz.py
fomac/: CMakeLists.txt  fomac.cpp  fomac.hpp
qdmi/: CMakeLists.txt  build.sh  qdmi.cpp  qdmi.hpp
scheduler/: CMakeLists.txt  build.sh  connection_handling.cpp  connection_handling.hpp  qschedulerrunner_d.cpp
scheduler/schedulers/: CMakeLists.txt  scheduler_round_robin.cpp
selector/: CMakeLists.txt  build.sh  qselectorrunner_d.cpp  selector  selector.cpp
selector/clients/: build.sh  client
selector/selectors/: CMakeLists.txt  selector_all.cpp  selector_basic.cpp
src/: ArchitectureFactory.cpp  CMakeLists.txt  CommuteCNotRxPass.cpp  CommuteCNotXPass.cpp  CommuteCNotZPass.cpp  CommuteRxCNotPass.cpp  CommuteXCNotPass.cpp  CommuteZCNotPass.cpp  CustomExamplePass.cpp  CxToHCzHDecompositionPass.cpp  CzToHCxHDecompositionPass.cpp  DoubleCnotCancellationPass.cpp  HXHToZPass.cpp  HZHToXPass.cpp  HadamardAndXGateSwitchPass.cpp  HadamardAndYGateSwitchPass.cpp  HadamardAndZGateSwitchPass.cpp  NormalizeArgAnglePass.cpp  NullRotationCancellationPass.cpp  PauliGateAndHadamardSwitchPass.cpp  PrintQuakeGatesPass.cpp  QASM3ToQuakePass.cpp  QMPM_d.cpp  QirAllocationAnalysis.cpp  QirAnnotateUnsupportedGates.cpp  QirBarrierBeforeFinalMeasurements.cpp  QirCNotToHCZHDecomposition.cpp  QirCZToHCnotHDecomposition.cpp  QirCommuteCnotRx.cpp  QirCommuteCnotX.cpp  QirCommuteCnotZ.cpp  QirCommuteRxCnot.cpp  QirCommuteXCnot.cpp  QirCommuteZCnot.cpp  QirDeferMeasurement.cpp  QirDivisionByZero.cpp  QirDoubleCnotCancellation.cpp  QirFunctionAnnotator.cpp  QirFunctionReplacement.cpp  QirFunctionValidationAnalysis.cpp  (+58 more)
src/headers/: PassModule.h  PassModule.hpp  QirAllocationAnalysis.hpp  QirAnnotateUnsupportedGates.hpp  QirBarrierBeforeFinalMeasurements.h  QirBarrierBeforeFinalMeasurements.hpp  QirCNotDecomposition.hpp  QirCNotToHCZHDecomposition.hpp  QirCXCancellation.h  QirCXCancellation.hpp  QirCommuteCnotRx.hpp  QirCommuteCnotX.hpp  QirCommuteCnotZ.hpp  QirCommuteRxCnot.hpp  QirCommuteXCnot.hpp  QirDeferMeasurement.hpp  QirDivisionByZero.h  QirFunctionAnnotator.hpp  QirFunctionReplacement.hpp  QirFunctionValidation.hpp  QirGrouping.h  QirGrouping.hpp  QirGroupingAnalysis.h  QirMergeRotations.hpp  QirNormalizeArgAngle.hpp  QirNullRotationCancellation.hpp  QirPlaceIrreversibleGatesInMetadata.hpp  QirQubitRemap.hpp  QirRedundantGatesCancellation.hpp  QirRemoveBasicBlocksWithSingleNonConditionalBranchInsts.h  QirRemoveBasicBlocksWithSingleNonConditionalBranchInsts.hpp  QirRemoveNonEntrypointFunctions.h  QirRemoveNonEntrypointFunctions.hpp  QirReplaceConstantBranches.h  QirReplaceConstantBranches.hpp  QirResourceAnnotation.hpp  QirRzDecomposition.hpp  QirRzToRxRyRxDecomposition.hpp  QirU3Decomposition.hpp  QirXCnotXReduction.hpp  (+1 more)
src/pass_runner/: PassRunner.cpp  PassRunner.hpp  QirPassRunner.cpp  QirPassRunner.hpp
src/passes/: CMakeLists.txt  QirAllocationAnalysis.cpp  QirAnnotateUnsupportedGates.cpp  QirBarrierBeforeFinalMeasurements.cpp  QirCNotDecomposition.cpp  QirCNotToHCZHDecomposition.cpp  QirCXCancellation.cpp  QirCommuteCnotRx.cpp  QirCommuteRxCnot.cpp  QirCommuteXCnot.cpp  QirDeferMeasurement.cpp  QirDivisionByZero.cpp  QirFunctionAnnotator.cpp  QirFunctionReplacement.cpp  QirFunctionValidation.cpp  QirGrouping.cpp  QirGroupingAnalysis.cpp  QirMergeRotations.cpp  QirNormalizeArgAngle.cpp  QirNullRotationCancellation.cpp  QirQubitRemap.cpp  (+13 more)
tests/: CMakeLists.txt  MQSSJobStatus.h  RestClient.cpp  RestClient.h  apply_passes.cpp  build.sh  build_client.sh  client.cpp  connection_handling.cpp  connection_handling.hpp  generate-quake.sh  main.cpp  run_test_scheduler.sh  run_test_selector.sh  test-optimization-submission.cpp  test.cpp  testCudaQDecompositionPasses.cpp  testCudaQTranspiler.cpp  testLinAlgParser.cpp  testMQSS-QCEC.cpp  testMQSSPasses.cpp  testQASMParser.cpp  testQASMParserCorrectness.cpp  testQASMParserSimple.cpp  test_scheduler  test_scheduler.cpp  test_selector  test_selector.cpp
tools/: CMakeLists.txt  cpp-to-only-quake.cpp  dump-folder-to-tikz.py  generate-merged-tikz-file.py  qasm-to-quake.cpp  quake-to-tikz.cpp
(+892 files in other folders)
